<resources>
    <string name="app_name">BlindSight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="known_bug">Bug cunoscut: Camera nu mai detecteaza </string>
    <string name="known_bug_2"> obiectele dupa accesarea meniului!</string>

    <string name="menu_home">Acasa</string>
    <string name="menu_gallery">Despre noi</string>
    <string name="DESPRE_NOI">DESPRE NOI</string>
    <string name="menu_slideshow">Ajutor</string>
    <string name="about_us_intro">Suntem o echipa mica, dar cu o idee mare.</string>
    <string name="about_us_team_mission">Suntem trei elevi – doi în clasa a 9-a și unul în clasa a 6-a – care și-au propus să rezolve o problemă reală: cum pot persoanele cu deficiențe de vedere să se deplaseze mai ușor prin oraș?\n\nAșa s-a născut ideea aplicației noastre.\n\nChiar dacă nu avem experiență profesională, ne-am pus pe treabă. Am învățat singuri despre machine learning, am lucrat ore întregi la un model de recunoaștere vizuală și am făcut peste 1000 de poze pentru a-l antrena. Aplicația noastră va putea identifica treceri de pietoni, semne de circulație și alte obiecte importante pentru siguranța celor cu probleme de vedere.</string>
    <string name="about_us_effort">Știm că nu suntem experți (încă), dar ceea ce ne diferențiază este pasiunea, seriozitatea și dorința de a face o diferență. Nu vrem doar să învățăm programare. Vrem să folosim tehnologia pentru a ajuta oamenii.</string>
    <string name="about_us_future">Aceasta este doar prima noastră aplicație, dar nu și ultima.</string>
    <string name="about_us_call_to_action">Dacă citești asta, îți mulțumim că ne acorzi câteva minute. Fie că vrei să ne oferi un feedback, o idee sau doar un mesaj de încurajare, ne-ar bucura enorm să auzim de la tine.</string>
    <string name="about_us_closing">Suntem abia la început, dar cu sprijinul vostru, putem construi ceva cu adevărat util.</string>
    <string name="about_us_content_description">Despre noi: Suntem o echipă de elevi care a creat o aplicație pentru a ajuta persoanele cu deficiențe de vedere să navigheze mai ușor.</string>
    <string name="blind_sight">Blind Sight</string>
    <string name="home_subtitle"> Un proiect pentru nevazatori</string>
    <string name="email_address">blindsight2025@gmail.com</string>
    <string name="empty_space"> </string>


    <string name="help_welcome">Bine ai venit la Blindsight!</string>

    <string name="help_instruction_1">Prima utilizare a aplicației necesită ajutorul unui însoțitor.</string>
    <string name="help_instruction_1.1">Ofera acces camerei la prima utilizare.</string>
    <string name="help_instruction_2">Ține telefonul spre obiectul dorit.</string>
    <string name="help_instruction_3">Vei primi o descriere audio a ceea ce se vede.</string>

    <string name="help_ensure_title">Asigură-te că:</string>
    <string name="help_ensure_1">- Volumul este activ.</string>
    <string name="help_ensure_2">- Ai dat permisiune la cameră.</string>
    <string name="help_ensure_3">- Ții camera nemișcată pentru rezultate clare.</string>

    <string name="help_contact">Întrebări? Scrie-ne pe email la blindsight2025@gmail.com.</string>

    <string name="help_navigation_tip">Pentru a intra în meniu, apasă pe cele 3 linii din colțul din stânga sus. Acolo se vor afla cele 3 butoane principale.</string>
    <string name="Settigs">Setari</string>
    <string name="despre_noi">Despre Noi</string>
</resources>