<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_home"
            android:textColor="@color/white" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/about_us"
            android:title="@string/menu_gallery"
            android:textColor="@color/white" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_slideshow"
            android:textColor="@color/white" />
    </group>

    <!-- Separatoare pentru a împinge emailul jos -->
    <item
        android:id="@+id/nav_separator0"
        android:title="@string/empty_space"
        android:enabled="false"
        android:icon="@android:color/transparent"/>

    <item
        android:id="@+id/nav_separator3"
        android:title="@string/empty_space"
        android:enabled="false"
        android:icon="@android:color/transparent"/>


    <!-- Email la final -->
    <item
        android:id="@+id/nav_email"
        android:title="@string/email_address"
        android:icon="@drawable/ic_mail"
        android:textColor="@color/white"/>
</menu>


