<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background_despre_noi"
    tools:context=".ui.slideshow.HelpFragment">


    <!-- Titlu -->
    <TextView
        android:id="@+id/help_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue_turquoise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Instrucțiuni -->
    <TextView
        android:id="@+id/help_instruction_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_instruction_1"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/help_welcome"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_instruction_1.1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_instruction_1.1"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/help_instruction_1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_instruction_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_instruction_2"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/help_instruction_1.1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_instruction_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_instruction_3"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/help_instruction_2"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Asigură-te că... -->
    <TextView
        android:id="@+id/help_ensure_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_ensure_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/help_instruction_3"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_ensure_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_ensure_1"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/help_ensure_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_ensure_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_ensure_2"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/help_ensure_1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_ensure_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_ensure_3"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/help_ensure_2"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contact -->
    <TextView
        android:id="@+id/help_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_contact"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/help_ensure_3"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Instrucțiune meniului -->
    <TextView
        android:id="@+id/help_navigation_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_navigation_tip"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/help_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
